--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Helixios eSports</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!--<link rel="stylesheet" href="css/default.css">-->
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="/css/master.css">
   </head>
   <body>
     <!-- Header -->
@@ -77,7 +77,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="images/welcome-banner.png" alt="First slide">
+                  <img class="caro-img d-block w-100" src="images/welcome-banner.png" alt="First slide">
                   <div class="carousel-caption">
                     <div class="container">
                        <div class="row d-flex align-items-center">
@@ -87,13 +87,13 @@
                 </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="images/t-banner.png" alt="Second slide">
+                  <img class="caro-img d-block w-100" src="images/t-banner.png" alt="Second slide">
                   <div class="carousel-caption align-items-center">
                     <p class="welcomeText"><span class="redDot">"</span>TASKFORCE TOURNAMENTS<span class="redDot">"</span></p>
                 </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="images/tech-banner.png" alt="Third slide">
+                  <img class="caro-img d-block w-100" src="images/tech-banner.png" alt="Third slide">
                   <div class="carousel-caption align-items-center">
                     <p class="welcomeText"><span class="redDot">"</span>TECHLINE BLOG<span class="redDot">"</span></p>
                 </div>
@@ -118,20 +118,20 @@
       </div>
       <div class="gameTray container-fluid">
         <div class="row d-flex align-items-center">
-          <div class="col-lg-2 gameLogo"><a href="#"><img src="images/csgo-logo.png" alt="CSGO Game Logo" /></a></div>
-          <div class="col-lg-2 gameLogo"><a href="#"><img src="images/pubg-logo.png" alt="PUBG Game Logo" /></a></div>
-          <div class="col-lg-2 gameLogo"><a href="#"><img src="images/fifa-logo.png" alt="FIFA Game Logo"  /></a></div>
-          <div class="col-lg-2 gameLogo"><a href="#"><img src="images/pes-logo.png" alt="PES Game Logo" ></a></div>
-          <div class="col-lg-2 gameLogo"><a href="#"><img src="images/blur-logo.png" alt="Blur Game Logo"  /></a></div>
-          <div class="col-lg-2 gameLogo"  id="bombsquadLogo"><a href="#"><img src="images/bombsquad-logo.png" alt="Bombsquad Game Logo"  /></a></div>
+          <div class="col-lg-2 col-sm-4 gameLogo"><a href="#"><img src="images/csgo-logo.png" alt="CSGO Game Logo" /></a></div>
+          <div class="col-lg-2 col-sm-4 gameLogo"><a href="#"><img src="images/pubg-logo.png" alt="PUBG Game Logo" /></a></div>
+          <div class="col-lg-2 col-sm-4 gameLogo"><a href="#"><img src="images/fifa-logo.png" alt="FIFA Game Logo"  /></a></div>
+          <div class="col-lg-2 col-sm-4 gameLogo"><a href="#"><img src="images/pes-logo.png" alt="PES Game Logo" ></a></div>
+          <div class="col-lg-2 col-sm-4 gameLogo"><a href="#"><img src="images/blur-logo.png" alt="Blur Game Logo"  /></a></div>
+          <div class="col-lg-2 col-sm-4 gameLogo"  id="bombsquadLogo"><a href="#"><img src="images/bombsquad-logo.png" alt="Bombsquad Game Logo"  /></a></div>
         </div>
       </div>
     </section>
     <section id="tournamentsSection">
-      <div class="tournamentsHeader row  d-flex align-items-end">
+      <div class="tournamentsHeader row d-flex align-items-end">
         <div class="col"><h1>TOURNAMENTS</h1></div>
         <div class="spacer">&nbsp</div>
-        <div class="col ml-5"><p class="tournamentsStatus"><a href="#">UPCOMING</a> • <a href="#">LIVE</a> • <a href="#">FINISHED</a></p></div>
+        <div class="col ml-5"><p class="tournamentsStatus"><a href="#">UPCOMING</a><span class="redDot"> • </span><a href="#">LIVE</a><span class="redDot"> • </span><a href="#">FINISHED</a></p></div>
       </div>
       <div class="tournamentBanners">
         <div class="row no-gutters" >
@@ -160,11 +160,10 @@
           <div class="col-lg-4"><figure><a href="#"><img class="img-fluid" src="images/budget-laptop-blog.png" alt="Budget Gaming Laptop Blog"></a><figcaption>TOP 5 BUDGET GAMING LAPTOPS</figcaption><hr class="blogLines"></figure></div>
         </div>
       </div>
-      <div class="getInTouch container">
+      <div class="getInTouch container-fluid">
         <div class="row d-flex align-items-center">
-            <div class="col-8"><p class="gitText"><span class="redDot">•</span> For more Gaming and Tech advice,<span class="redDot"> get in touch with us</span></p></div>
-
-            <div class="col"><a href="#" id="gitButton">GET IN TOUCH</a></div>
+            <div class="col col-lg-8 col-xs-12"><p class="gitText"><span class="redDot">•</span> For more Gaming and Tech advice,<span class="redDot"> get in touch with us</span></p></div>
+            <div class="col col-xs-12"><a href="#" id="gitButton">GET IN TOUCH</a></div>
         </div>
       </div>
     </section>
@@ -174,12 +173,12 @@
       </div>
       <div class="squadImages">
         <div class="row">
-          <div class="col-lg-2 "><figure><img class="img-fluid" src="images/gangro-dp.png" alt="GanGro777 Divyansh Tripathi Profile Image"><figcaption>GanGro777</figcaption><figcaption>Divyansh Tripathi</figcaption></figure></div>
-          <div class="col-lg-2 "><figure><img class="img-fluid" src="images/aceradi-dp.png" alt="AcerAdi Aditya Chaudhary Profile Image"><figcaption>AcerAdi</figcaption><figcaption>Aditya Chaudhary</figcaption></figure></div>
-          <div class="col-lg-2 "><figure><img class="img-fluid" src="images/hackme-dp.png" alt="hackme199 Shikhar Verma Profile Image"><figcaption>hackme199</figcaption><figcaption>Shikhar Verma</figcaption></figure></div>
-          <div class="col-lg-2 "> <figure><img class="img-fluid" src="images/iciciwali-dp.png" alt="ICICIwali Anurag Raj Profile Image"><figcaption>ICICIwali</figcaption><figcaption>Anurag Raj</figcaption></figure></div>
-          <div class="col-lg-2 "><figure><img class="img-fluid" src="images/karma-dp.png" alt="K@rma Anuj Pratap Singh Profile Image"><figcaption>K@rma</figcaption><figcaption>Anuj Pratap Singh</figcaption></figure></div>
-          <div class="col-lg-2"><figure><img class="img-fluid" src="images/bublaze-dp.png" alt="bublaze Abhishek Raj Profile Image"><figcaption>bublaze</figcaption><figcaption>Abhishek Raj</figcaption></figure></div>
+          <div class="col-lg-2 col-sm-6"><figure><img class="img-fluid" src="images/gangro-dp.png" alt="GanGro777 Divyansh Tripathi Profile Image"><figcaption>GanGro777</figcaption><figcaption>Divyansh Tripathi</figcaption></figure></div>
+          <div class="col-lg-2 col-sm-6"><figure><img class="img-fluid" src="images/aceradi-dp.png" alt="AcerAdi Aditya Chaudhary Profile Image"><figcaption>AcerAdi</figcaption><figcaption>Aditya Chaudhary</figcaption></figure></div>
+          <div class="col-lg-2 col-sm-6"><figure><img class="img-fluid" src="images/hackme-dp.png" alt="hackme199 Shikhar Verma Profile Image"><figcaption>hackme199</figcaption><figcaption>Shikhar Verma</figcaption></figure></div>
+          <div class="col-lg-2 col-sm-6"> <figure><img class="img-fluid" src="images/iciciwali-dp.png" alt="ICICIwali Anurag Raj Profile Image"><figcaption>ICICIwali</figcaption><figcaption>Anurag Raj</figcaption></figure></div>
+          <div class="col-lg-2 col-sm-6"><figure><img class="img-fluid" src="images/karma-dp.png" alt="K@rma Anuj Pratap Singh Profile Image"><figcaption>K@rma</figcaption><figcaption>Anuj Pratap Singh</figcaption></figure></div>
+          <div class="col-lg-2 col-sm-6"><figure><img class="img-fluid" src="images/bublaze-dp.png" alt="bublaze Abhishek Raj Profile Image"><figcaption>bublaze</figcaption><figcaption>Abhishek Raj</figcaption></figure></div>
         </div>
       </div>
     </section>
@@ -191,23 +190,34 @@
       <div class="footerLogo container-fluid">
         <div class="row">
           <div class="col-lg-3">
-            <figure>
-              <img src="images/footer-logo.png" alt="Helixios Footer Logo" style="transform: scale(0.8);">
-              <figcaption>
+            <div class="container">
+              <div class="row align-items-center">
+              <div class="col col-lg-12 col-xs-6">
+                <img src="images/footer-logo.png" alt="Helixios Footer Logo" style="transform: scale(0.8);">
+              </div>
+              <div class="col col-lg-12 ml-5 col-xs-5">
+                <figcaption>
                 <img src="images/facebook.png" alt="Facebook Icon">
                 <img src="images/instagram.png" alt="Instagram Icon">
                 <img src="images/youtube.png" alt="Youtube Icon">
                 <img src="images/discord.png" alt="Discord Icon">
                 <img src="images/telegram.png" alt="Telegram Icon">
               </figcaption>
-            </figure>
+              </div>
+            </div>
+            </div>
           </div>
-          <div class="gitHeader ml-5 col-lg-4">
-            <h2>GET IN TOUCH</h2>
-              <div><img src="images/mail.png" alt="Mail Icon"><p>helixios.esports@gmail.com</p></div><br>
-              <div><img src="images/phone.png" alt="Phone Icon" class="phoneIcon"><img src="images/whatsapp.png" alt="Whatsapp Icon"><p>+91 6388478787</p></div>
+
+          <div class="gitHeader ml-5 col-lg-4 mt-5">
+            <div class="container">
+              <div class="row">
+              <div class="col-12"><h2>GET IN TOUCH</h2></div>
+              <div class="col-12"><img src="images/mail.png" alt="Mail Icon"><p>helixios.esports@gmail.com</p></div><br>
+              <div class="col-12"><img src="images/phone.png" alt="Phone Icon" class="phoneIcon"><img src="images/whatsapp.png" alt="Whatsapp Icon"><p>+91 6388478787</p></div>
+            </div>
+            </div>
           </div>
-          <div class="location col-lg-4">
+          <div class="location col-lg-4 mt-5">
             <div class="row">
               <div class="col-2"><img src="images/pin.png" alt="Location Drop-Pin Icon "></div>
               <div class="col">
