--- a/index.html
+++ b/index.html
@@ -5,11 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Helixios eSports</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="css/default.css">-->
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-     <!-- Header -->
+
+    <div id="overlay">
+        <div class="overlay__inner">
+            <div class="overlay__content"><body>
+            <div class="boxes">
+                <div class="box">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="box">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="box">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="box">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <script type="text/javascript">
+            document.onreadystatechange = function() {
+        if (document.readyState !== "complete") {
+          document.querySelector("body").style.visibility = "hidden";
+          document.querySelector("#overlay").style.visibility = "visible";
+        } else {
+          document.querySelector("#overlay").style.display = "none";
+          document.querySelector("body").style.visibility = "visible";
+        }
+        };
+    </script>
+
+    <!-- Header -->
     <header>
       <img src="images/helixios-logo.png" alt="Helixios Logo" class="helixiosLogo img-fluid" />
         <!-- Navigation Bar -->
@@ -193,9 +238,9 @@
             <div class="container">
               <div class="row align-items-center">
               <div class="col col-lg-12 col-xs-6">
-                <img src="images/footer-logo.png" alt="Helixios Footer Logo" style="transform: scale(0.8);">
+                <img class="helixiosLogo-f" src="images/footer-logo.png" alt="Helixios Footer Logo" style="transform: scale(0.8);">
               </div>
-              <div class="col col-lg-12 ml-5 col-xs-5">
+              <div class="social-bar col col-lg-12 ml-5 col-xs-5">
                 <figcaption>
                 <img src="images/facebook.png" alt="Facebook Icon">
                 <img src="images/instagram.png" alt="Instagram Icon">
@@ -208,7 +253,7 @@
             </div>
           </div>
 
-          <div class="gitHeader ml-5 col-lg-4 mt-5">
+          <div class="gitHeader ml-5 col-lg-4 mt-3">
             <div class="container">
               <div class="row">
               <div class="col-12"><h2>GET IN TOUCH</h2></div>
@@ -217,7 +262,7 @@
             </div>
             </div>
           </div>
-          <div class="location col-lg-4 mt-5">
+          <div class="location col-lg-4 mt-3">
             <div class="row">
               <div class="col-2"><img src="images/pin.png" alt="Location Drop-Pin Icon "></div>
               <div class="col">
@@ -233,10 +278,13 @@
     </footer>
     <div class="redendFooter container-fluid">
       <div class="row d-flex align-items-center">
-        <div class="col"><h2>Helixios eSports</h2><p> - A Constituent of Helixios Corp</p></div>
+        <div class="redendHead col"><h2>Helixios eSports</h2><p> - A Constituent of Helixios Corp</p></div>
+        <div class="mobile-redendHead col"><h2>Helixios eSports</h2><br><p>A Constituent of Helixios Corp</p></div>
         <div class="col"><img src="images/gototop-arrow.png" alt=""></div>
       </div>
     </div>
+
+
   </body>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
